--- a/src/style.css
+++ b/src/style.css
@@ -212,6 +212,21 @@
   .inset-0 {
     inset: calc(var(--spacing) * 0);
   }
+  .-top-0 {
+    top: calc(var(--spacing) * -0);
+  }
+  .-top-10 {
+    top: calc(var(--spacing) * -10);
+  }
+  .top-0 {
+    top: calc(var(--spacing) * 0);
+  }
+  .right-0 {
+    right: calc(var(--spacing) * 0);
+  }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
   .-z-10 {
     z-index: calc(10 * -1);
   }
@@ -452,6 +467,12 @@
       border-color: color-mix(in oklab, var(--color-black) 10%, transparent);
     }
   }
+  .bg-\[\#FDFAF0\] {
+    background-color: #FDFAF0;
+  }
+  .bg-\[\#\] {
+    background-color: #;
+  }
   .bg-cyan-400 {
     background-color: var(--color-cyan-400);
   }
@@ -565,6 +586,9 @@
   .text-wrap {
     text-wrap: wrap;
   }
+  .text-\[\#1227\] {
+    color: #1227;
+  }
   .text-\[\#12275A\] {
     color: #12275A;
   }
@@ -650,6 +674,12 @@
         --tw-scale-z: 110%;
         scale: var(--tw-scale-x) var(--tw-scale-y);
       }
+    }
+  }
+  .md\:size-32 {
+    @media (width >= 48rem) {
+      width: calc(var(--spacing) * 32);
+      height: calc(var(--spacing) * 32);
     }
   }
   .md\:max-w-1\/2 {
